--- a/limits-service.yaml
+++ b/limits-service.yaml
@@ -1,3 +1,12 @@
 limits-service:
   minimum: 99
   maximum: 9999
+
+---
+
+spring:
+  profiles: dev
+
+limits-service:
+  minimum: 100
+  maximum: 1000
