Edits limit range for qa enviorment

--- a/limits-service.yaml
+++ b/limits-service.yaml
@@ -10,3 +10,13 @@ spring:
 limits-service:
   minimum: 100
   maximum: 1000
+
+
+---
+
+spring:
+  profiles: qa
+
+limits-service:
+  minimum: 222
+  maximum: 2222
